# panwave

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  panwave.doxygen
docs/html/: StationaryWaveletPacketTree_8h_source.html  Tree_8h_source.html  WaveletMath_8h_source.html  WaveletPacketTreeBase_8h_source.html  WaveletPacketTreeTemplateBase_8h_source.html  WaveletPacketTree_8h_source.html  Wavelet_8h_source.html  annotated.html  classes.html  classpanwave_1_1StationaryWaveletPacketTree-members.html  classpanwave_1_1StationaryWaveletPacketTree.html  classpanwave_1_1StationaryWaveletPacketTree__coll__graph.dot  classpanwave_1_1StationaryWaveletPacketTree__coll__graph.map  classpanwave_1_1StationaryWaveletPacketTree__coll__graph.md5  classpanwave_1_1StationaryWaveletPacketTree__inherit__graph.dot  classpanwave_1_1StationaryWaveletPacketTree__inherit__graph.map  classpanwave_1_1StationaryWaveletPacketTree__inherit__graph.md5  classpanwave_1_1Tree-members.html  classpanwave_1_1Tree.html  classpanwave_1_1Wavelet-members.html  classpanwave_1_1Wavelet.html  classpanwave_1_1WaveletMath-members.html  classpanwave_1_1WaveletMath.html  classpanwave_1_1WaveletPacketTree-members.html  classpanwave_1_1WaveletPacketTree.html  classpanwave_1_1WaveletPacketTreeBase-members.html  classpanwave_1_1WaveletPacketTreeBase.html  classpanwave_1_1WaveletPacketTreeBase__inherit__graph.dot  classpanwave_1_1WaveletPacketTreeBase__inherit__graph.map  classpanwave_1_1WaveletPacketTreeBase__inherit__graph.md5  classpanwave_1_1WaveletPacketTreeTemplateBase-members.html  classpanwave_1_1WaveletPacketTreeTemplateBase.html  classpanwave_1_1WaveletPacketTreeTemplateBase__coll__graph.dot  classpanwave_1_1WaveletPacketTreeTemplateBase__coll__graph.map  classpanwave_1_1WaveletPacketTreeTemplateBase__coll__graph.md5  classpanwave_1_1WaveletPacketTreeTemplateBase__inherit__graph.dot  classpanwave_1_1WaveletPacketTreeTemplateBase__inherit__graph.map  classpanwave_1_1WaveletPacketTreeTemplateBase__inherit__graph.md5  classpanwave_1_1WaveletPacketTree__coll__graph.dot  classpanwave_1_1WaveletPacketTree__coll__graph.map  (+32 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  (+22 more)
src/: StationaryWaveletPacketTree.cc  StationaryWaveletPacketTree.h  Tree.h  Wavelet.cc  Wavelet.h  WaveletMath.cc  WaveletMath.h  WaveletPacketTree.cc  WaveletPacketTree.h  WaveletPacketTreeBase.h  WaveletPacketTreeTemplateBase.h
test/: test.cc
